Revert "Finish top section"
This reverts commit e72de16ad1893ea2d65bd53f5c102fc8492c951a.

--- a/index.html
+++ b/index.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <title>Landing Page</title>
-  </head>
-  <body>
-    <div class="header-container">
-      <div class="header">
-        <div class="header-logo">Header Logo</div>
-        <div class="header-links">
-          <a href="">Link 1</a>
-          <a href="">Link 2</a>
-          <a href="">Link 3</a>
+</head>
+<body>
+    <div class="hero">
+        <div class="header">
+            <div class="header-logo">
+                Header Logo
+            </div>
+            <div class="header-links">
+                <a href="">Link 1</a>
+                <a href="">Link 2</a>
+                <a href="">Link 3</a>
+            </div>
         </div>
-      </div>
+        <!-- <div class="hero-main">
+            <div class="hero-intro">
+                <h1>This website is awesome</h1>
+            </div>
+            <div class="hero-image">
+                <img src="img.jpg" alt="Autumn leaves">
+            </div>
+        </div> -->
     </div>
-    <div class="hero-container">
-      <div class="hero">
-        <div class="hero-intro">
-          <h1>This website is awesome</h1>
-        </div>
-        <div class="hero-image">
-          <img src="img.png" alt="AI art" />
-        </div>
-      </div>
-    </div>
-  </body>
+</body>
 </html>
